workloads/asciinema/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asciinema
  namespace: default
  labels:
    app: asciinema
spec:
  type: ClusterIP
  selector:
    app: asciinema
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
